# amatch

./: .gitignore  CMakeLists.txt  README.md
Debug/: create_make.bat  rmall.bat
Release/: build_generate_fpkeys.bat  create_generate_fpkeys.bat  create_make.bat
android/: .cproject  .project  AmatchTest.keystore  AndroidManifest.xml  amatch_interface.i  build.xml  build_ndk.sh  ogbuild.sh  runamatch.sh  sign.sh
android/files/: AmatchTest-debug-1.22.apk
android/jni/: Android.mk  Application.mk  amatch.cpp  amatch_interface.cpp  amatch_interface.h  amatch_interface_imp.c  amatch_interface_imp.cpp  amatch_main.cpp  amatch_old.cpp  logging.h  opensl_io.c  opensl_io.h  opensl_io2.c  opensl_io2.cpp  opensl_io2.h  opensl_io4.cpp  opensl_io4.h
android/libs/armeabi-v7a/: amatch
android/res/layout/: activity_main.xml
android/res/values/: strings.xml
android/src/com/lamerman/: FileDialog.java
android/src/com/ogcraft/amatchtest/: AmatchTestActivity.java  FileAction.java
audio-analyzer-for-android/: build_mac.sh
audio-analyzer-for-android/audioAnalyzer/: AnalyzeSpectrumAnalyzer.keystore  clear_mac.sh
audio-analyzer-for-android/audioAnalyzer/src/com/google/corp/productivity/specialprojects/android/samples/fft/: AnalyzeView.java
include/: amatch.h
scripts/: amatch.jl  amatch_1.jl  deps_analize.sh  notes1.txt
src/: amatch.cpp  amatch_interface_imp.cpp  asearch.cpp  filters.cpp  filters.h  sigproc.cpp  sigproc.h  utils.cpp  utils.h
